# qcoreset

./: .gitignore  README.md  exp.py  pyproject.toml  train.py
models/: __init__.py  config.py  lenet.py  resnet18.py  resnet18_noise.py  resnet20.py  resnet20_noise.py  resnet50.py  resnet50_noise.py
mydatasets/: __init__.py  datasets.py  indexed_dataset.py  subset.py  tinyimagenet.py
trainers/: __init__.py  base_trainer.py  crest_trainer.py  random_trainer.py  single_ensemble_trainer.py  subset_trainer.py
utils/: __init__.py  arguments.py  auto_naming.py  compare_output.py  craig.py  gradients.py  submodular.py  submodular_ensemble.py  warmup_scheduler.py
