[project]
name = "qcoreset"
version = "0.1.0"
description = "Quantization Aware Coreset Training"
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
dependencies = [
    "datasets>=4.5.0",
    "numpy>=2.4.2",
    "scikit-learn>=1.8.0",
    "timm>=1.0.24",
    "torch>=2.10.0",
    "torchao",
    "torchvision>=0.25.0",
    "tqdm>=4.67.3",
    "trackio>=0.15.0",
    "transformers>=5.1.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.0",
    "ty>=0.0.15",
]

[tool.uv.sources]
torchao = { url = "https://download.pytorch.org/whl/nightly/cu128/torchao-0.17.0.dev20260209%2Bcu128-cp310-abi3-manylinux_2_24_x86_64.manylinux_2_28_x86_64.whl" }
