[project]
name = "qcoreset"
version = "0.1.0"
description = "Quantization Aware Coreset Training"
readme = "README.md"
requires-python = "==3.12.*"
license = "MIT"
dependencies = [
    "datasets",
    "numpy",
    "python-dotenv",
    "scikit-learn",
    "submodlib-py",
    "timm",
    "torch==2.9.*",
    "torchao",
    "torchvision",
    "tqdm",
    "trackio",
    "transformers",
    "numba==0.60.*"
]

[dependency-groups]
dev = [
    "ruff>=0.15.0",
    "ty>=0.0.15",
]

