[project]
name = "qcoreset"
version = "0.1.0"
description = "Quantization Aware Coreset Training"
readme = "README.md"
requires-python = "==3.12.*"
license = "MIT"
dependencies = [
    "datasets==4.5.*",
    "numpy>=2",
    "python-dotenv",
    "scikit-learn==1.8.*",
    "submodlib-py==0.0.3",
    "timm==1.0.24",
    "torch==2.9.*",
    "torchao==0.15.*",
    "torchvision==0.24.*",
    "tqdm",
    "trackio==0.15.*",
    "transformers==5.1.*",
    "numba==0.60.*"
]

[dependency-groups]
dev = [
    "ruff>=0.15.0",
    "ty>=0.0.15",
]

[tool.ty.rules]
no-matching-overload = "ignore"
not-subscriptable = "ignore"
